# xsdcxx-musicxml

./: .clang-format  .gitignore  CMakeLists.txt  FindXSDCXX.cmake  README.rst  document.hxx  dom-parse.cpp  dom-parse.cxx  dom-parse.hpp  dtdbin.cpp  generate.cpp  generate.cxx  grammar-input-stream.cpp  grammar-input-stream.hpp  measure1.cpp  measure1.hpp  music_data.hpp  music_data_serialization_visitor.hpp  musicxml.cxx  musicxml.hxx  musicxml.xsd  note.cpp  note.cxx  note.hpp  note.hxx  part1.cpp  part1.hpp  partwise.cpp  roundtrip.cpp  roundtrip.cxx  timewise.cpp  utilities.cpp  utilities.hpp  xlink.cxx  xlink.hxx  xml.cxx  xml.hxx  xsdbin.cpp
